# Spacecraft-Autopilot

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  raport.csv
.github/workflows/: ci.yml
assets/: SLS.json  spacecraft.json
src/: main.cpp
src/control/: Autopilot.cpp  Autopilot.hpp  ControlStrategy.hpp  PIDController.cpp  PIDController.hpp
src/core/: Diagnostics.hpp  SimulationEngine.cpp  SimulationEngine.hpp  Spacecraft.cpp  Spacecraft.hpp  State.hpp
src/multisimulation/: BatchSimulation.cpp  BatchSimulation.hpp
src/physics/: PhysicsModel.cpp  PhysicsModel.hpp
src/rendering/: Renderer.cpp  Renderer.hpp
src/services/: ConfigFile.cpp  ConfigFile.hpp  ConfigFileReader.hpp  DataLogger.cpp  DataLogger.hpp
tests/: CMakeLists.txt  CMakelists.txt  test_autopilot.cpp  test_physics_model.cpp  test_pid_controller.cpp  test_placeholder.cpp  test_spacecraft.cpp
